force-app/main/default/objects/Transaction__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <summarizedField>Transaction_Item__c.Discount__c</summarizedField>
    <summaryForeignKey>Transaction_Item__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>