force-app/main/default/objects/Transaction__c/fields/Transaction_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Cost__c</fullName>
    <label>Transaction Cost</label>
    <summarizedField>Transaction_Item__c.ItemCost__c</summarizedField>
    <summaryForeignKey>Transaction_Item__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>