force-app/main/default/objects/Transaction__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <label>Transaction Count</label>
    <summaryForeignKey>Transaction_Item__c.Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>